--- a/package.json
+++ b/package.json
@@ -15,16 +15,25 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
-    "react-native-gesture-handler": "~1.6.1",
-    "react-native-reanimated": "~1.9.0",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-fit-image": "^1.5.5",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.13.0",
     "react-native-screens": "~2.9.0",
+    "react-native-snap-carousel": "^4.0.0-beta.5",
+    "react-native-svg": "^12.1.0",
+    "react-native-tab-view": "^2.15.1",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-web": "~0.11.7",
+    "react-router-native": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "jest": "~25.2.6",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "~16.11.0"
   },
   "jest": {
